fix modal on mobile display

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -44,12 +44,6 @@ hr {
   text-align: center;
 }
 
-h1 {
-  @media screen and (min-width: $desktop) {
-    font-size: 5rem;
-  }
-}
-
 h2 {
   margin: 2rem 0;
   font-size: 3.2rem;
@@ -181,20 +175,43 @@ h4 {
     color: #fff;
   }
 
+  h1 {
+    margin: 2rem 0;
+    font-size: 2rem;
+
+    @media screen and (min-width: $tablet) {
+      font-size: 3rem;
+    }
+    @media screen and (min-width: $desktop) {
+      font-size: 4rem;
+    }
+    @media screen and (min-width: $desktop) and (max-height: 500px) {
+      margin: 1rem 0;
+    }
+  }
+   
   .button {
     width: 35%;
-    margin: 5rem auto 0;
+    margin: 2rem auto;
     padding: 1.4rem 3.2rem;
     font-size: 1.4rem;
     background-image: linear-gradient(90deg, rgba(49,61,65,0.8), rgba(49,61,65,0.8));
     @media screen and (max-width: $phone){
-      width: 60%;
+      width: 80%;
+      margin: 1rem 0;
+      padding: 1rem;
+    }
+    @media screen and (min-width: $desktop) and (max-height: 400px) {
+      margin: 1rem auto;
     }
   }
 
   .icon-container {
-    margin: 5rem 0 0;
+    margin: 2rem 0;
     height: 64px;
+    @media screen and (max-height: 600px) {
+      margin: 1rem auto 0;
+    }
   }
 }
 
@@ -380,6 +397,8 @@ footer {
     position: relative;
     background-color: rgb(37, 41, 52);
     color: #eee;
+    padding: 10px;
+    overflow: auto;
 
     @media screen and (min-width: $phone) {
       width: 100px;
@@ -395,6 +414,11 @@ footer {
       height: 100%;
       transition: opacity 0.5s ease-in-out .5s;
       opacity: 0;
+      @media screen and (max-height: 500px) {
+        label {
+          font-size: 1rem;
+        }
+      }
     }
 
   }
@@ -407,6 +431,12 @@ footer {
       color: #eee;
       &:hover {
         color: $yellow;
+      }
+    }
+
+    @media screen and (max-width: $phone) {
+      i {
+        font-size: 2em;
       }
     }
   }
@@ -442,7 +472,9 @@ footer {
 }
 
 form {
-  width: 80%;
+  width: 100%;
+  margin-top: 70px; 
+
   @media screen and (min-width: $phone) {
     width: 60%;
   }
